--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,53 @@ body {
   width: auto;
   height: 80%;
   border: white 1px solid;
+  display: flex;
+  flex-direction: column;
+}
+#mainposter .down .Lft{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+#mainposter .down .Lft .L{
+  width: 50%;
+  height: 100%;
+  border: white 1px solid;
+}
+#mainposter .down .Lft .L .hidebox{
+  width: 400px;
+  height: 400px;
+  border: white 1px solid;
+  background-color: #2A363B;
+  left: -410;
+  bottom: 300;
+  position: absolute;
+}
+#mainposter .down .Lft .L .Garbage1{
+  width:150px;
+  padding-top: 0px;
+  padding-left: 0px;
+  position: absolute;
+}
+#mainposter .down .Lft .L .trashcan2{
+  width:200px;
+  padding-top: 100px;
+  padding-left: 10px;
+  position: absolute;
+  transform-origin: 80% 100%;
+}
+#mainposter .down .Lft .L .trashcan1{
+  width:200px;
+  padding-top: 101px;
+  padding-left: 10px;
+  position: absolute;
+  transform-origin: 85% 50%;
+}
+#mainposter .down .Lft .R{
+  width: 50%;
+  height: 100%;
+  border: white 1px solid;
 }
 
 
