--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
   font-family: "Typewriter";
   src: url("./assets/fonts/Justink.ttf") format("truetype");
 }
+@font-face {
+  font-family: "Dufanthe";
+  src: url("./assets/fonts/Dufanthe.ttf") format("truetype");
+}
 
 body {
     background-color: #2A363B;
@@ -23,8 +27,8 @@ body {
 }
 
 #poster {
-    width: 900;
-    height: 700;
+    width: 750;
+    height: 550;
     background-color: #99B898;
     border: 1px #2A363B solid;
     position: absolute;
@@ -37,7 +41,7 @@ body {
     flex-direction: column;
   }
 #poster .Heading{
-  padding-bottom: 10px;
+  padding-bottom: 30px;
   margin: auto;
   height: 5%;
   text-align: center;
@@ -47,7 +51,7 @@ body {
 }
 #poster .Heading p{
   margin: auto;
-  padding-top: 25px;
+  padding-top: 30px;
 }
 
 
@@ -73,21 +77,19 @@ body {
 }
 #mainposter .down{
   width: auto;
-  height: 80%;
-  border: white 1px solid;
+  height: 75%;
   display: flex;
   flex-direction: column;
 }
 #mainposter .down .Lft{
-  width: 50%;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
 }
 #mainposter .down .Lft .L{
-  width: 50%;
+  width: 30%;
   height: 100%;
-  border: white 1px solid;
 }
 #mainposter .down .Lft .L .hidebox{
   width: 400px;
@@ -98,36 +100,70 @@ body {
   position: absolute;
 }
 #mainposter .down .Lft .L .Garbage1{
-  width:150px;
+  width:135px;
   padding-top: 0px;
   padding-left: 0px;
   position: absolute;
+  left: -200;
+  top: 0;
 }
 #mainposter .down .Lft .L .trashcan2{
-  width:200px;
+  width:180px;
   padding-top: 100px;
   padding-left: 10px;
   position: absolute;
   transform-origin: 80% 100%;
 }
 #mainposter .down .Lft .L .trashcan1{
-  width:200px;
+  width:180px;
   padding-top: 101px;
   padding-left: 10px;
   position: absolute;
   transform-origin: 85% 50%;
 }
-#mainposter .down .Lft .R{
-  width: 50%;
-  height: 100%;
-  border: white 1px solid;
+.play-now{
+  text-decoration: none;
+}
+.link-box {
+  margin: auto;
+  margin-top: 240;
+  border: 1px solid #2A363B;
+  background-color: #2A363B;
+  border-radius: 5px;
+  width: 130px;
+  height: 40px;
+  text-align: center;
+}
+.link-box p{
+  margin: auto;
+  font-family: "Acme", sans-serif;
+  font-size: 30px;
+  color: #2A363B;
+  color: #99B898;
 }
 
+#mainposter .down .Lft .R{
+  width: 70%;
+  height: 100%;
+}
+#mainposter .down .Lft .R p{
+  margin-top: 15px;
+  margin-right: 35px;
+  font-size: 32px;
+  text-align: center;
+  color:  #2A363B ;
+  font-family: "Dufanthe", sans-serif;
+}
+.People {
+  width: 450px;
+  padding-top: 10px;
+  padding-left: 20px;
+}
 
 #quote{
   width: auto;
   padding-left: 20px;
-  padding-bottom: 10px;
+  margin-bottom: 20px;
   height: 15%;
   display: flex;
   flex-direction: row;
@@ -140,7 +176,7 @@ body {
 }
 #quote .text p{
   margin: auto;
-  padding-top: 35px;
+  padding-top: 15px;
   font-size: 28px;
 }
 #quote .text #name{
